--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -18,14 +18,12 @@ jobs:
       RAILS_ENV: test
     steps:
       - uses: actions/checkout@v2
-      - name: Install dependent libraries
+      - name: Install chrome
         run: |
-          apt-get update
-          apt-get install sudo
-          sudo apt-get install -y libpq-dev
-          curl -sS -L https://dl.google.com/linux/linux_signing_key.pub | apt-key add -
-          echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google.list
-          apt-get install -y google-chrome-stable
+          wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add -
+          echo 'deb http://dl.google.com/linux/chrome/deb/ stable main' | tee /etc/apt/sources.list.d/google-chrome.list
+          apt update -y
+          apt install -y google-chrome-stable
       - name: bundler config
         run: bundle config set path 'vendor/bundle'
       - name: cache gems
@@ -42,9 +40,17 @@ jobs:
           bundle install --jobs 4 --retry 3
       - name: setup db schema
         run: |
-          bundle exec rails db:create ridgepole:apply --trace
+          bundle exec rails db:create db:schema:load --trace
       - name: run spec
         run: bundle exec rspec
+      - name: Archive rspec result screenshots
+        if: failure()
+        uses: actions/upload-artifact@v3
+        with:
+          name: rspec result screenshots
+          path: |
+            tmp/screenshots/
+            tmp/capybara/
   rubocop:
     runs-on: ubuntu-latest
     container:
