--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
     "autoprefixer": "^10.4.14",
+    "daisyui": "^2.51.6",
     "esbuild": "^0.17.18",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
