--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -18,6 +18,15 @@ jobs:
       RAILS_ENV: test
     steps:
       - uses: actions/checkout@v2
+        with:
+          path: node_modules
+          key: yarn-${{ hashFiles('**/yarn.lock') }}
+      - name: Set up yarn and node
+        run: |
+          curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+          echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+          curl -sL https://deb.nodesource.com/setup_16.x | bash -
+          apt install -y yarn nodejs
       - name: Install chrome
         run: |
           wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add -
@@ -38,6 +47,8 @@ jobs:
         if: steps.cache-gems.outputs.cache-hit != 'true'
         run: |
           bundle install --jobs 4 --retry 3
+      - name: yarn install
+        run: yarn install
       - name: setup db schema
         run: |
           bundle exec rails db:create db:schema:load --trace
