--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -18,15 +18,12 @@ jobs:
       RAILS_ENV: test
     steps:
       - uses: actions/checkout@v2
-        with:
-          path: node_modules
-          key: yarn-${{ hashFiles('**/yarn.lock') }}
       - name: Set up yarn and node
         run: |
           curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
           echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
           curl -sL https://deb.nodesource.com/setup_16.x | bash -
-          apt install -y yarn nodejs
+          apt-get install -y --no-install-recommends nodejs yarn
       - name: Install chrome
         run: |
           wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add -
