--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -49,9 +49,8 @@ jobs:
       - name: setup db schema
         run: |
           bundle exec rails db:create db:schema:load --trace
-      - run:
-          name: Precompile Assets
-          command: bundle exec rake assets:precompile
+      - name: Precompile Assets
+          run: bundle exec rake assets:precompile
       - name: run spec
         run: bundle exec rspec
       - name: Archive rspec result screenshots
