--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -82,3 +82,24 @@ jobs:
         run: bundle install --jobs 4 --retry 3
       - name: run rubocop
         run: bundle exec rubocop
+  erblint:
+    runs-on: ubuntu-latest
+    container:
+      image: ruby:3.2.2
+    steps:
+      - uses: actions/checkout@v2
+      - name: bundler config
+        run: bundle config set path 'vendor/bundle'
+      - name: Cache gems
+        id: cache-gems
+        uses: actions/cache@v2
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-gems-
+      - name: setup bundle
+        if: steps.cache-gems.outputs.cache-hit != 'true'
+        run: bundle install --jobs 4 --retry 3
+      - name: run erblint
+        run: bundle exec erblint .
