--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "tailwindcss": "^3.3.2"
   },
   "scripts": {
-    "dev": "TAILWIND_MODE=watch postcss -i tailwind.css -o build.css --watch",
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets postcss -i tailwind.css -o build.css --minify",
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
   }
 }
